# ble_desktop

./: .gitignore  Cargo.toml
dart-ffi/: Cargo.toml  build.rs
dart-ffi/src/: helpers.rs  instance.rs  lib.rs  utils.rs
src/: lib.rs  main.rs
src/common/: models.rs  utils.rs
src/models/: ble_cache.rs  ble_core.rs  ble_peripherail_detail.rs  device_info.rs  filter_device.rs  mod.rs
test-lib/: Cargo.toml
test-lib/src/: main.rs
