[package]
name = "ble_desktop"
version = "0.1.0"
authors = ["liodali "]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.9.0"
futures = "0.3.17"
async-trait = "0.1.52"
hashbrown = "0.11.2"
once_cell = "1.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.73"
