[package]
name = "ble-core-dart-ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ble_desktop = { path = "../" }
tokio = { version = "1.14.0", features = ["rt", "macros","rt-multi-thread"] }
threadpool = "1.8.1"
once_cell = "1.7.1"
serde_json = "1.0.64"
byteorder = "1"
ffi_helpers = "0.2"
allo-isolate = "0.1.6"
lazy_static = "1.4"
