[package]
name = "ble-core-dart-ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type=["staticlib", "cdylib","rlib"]



[dependencies]
ble_desktop = { path = "../" }
tokio = { version = "1.15.0", features = ["rt", "macros","rt-multi-thread"] }
threadpool = "1.8.1"
once_cell = "1.7.1"
serde = "1.0.133"
serde_json = "1.0.73"
byteorder = "1"
ffi_helpers = "0.3.0"
allo-isolate = "0.1.12"
lazy_static = "1.4.0"
futures = "0.3.17"

[build-dependencies]
cc = "1.0.72"
cbindgen = "0.20.0"
dart-bindgen = "0.1.8"
