[package]
name = "test-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ble_desktop = { path = "../" }
tokio = { version = "1.15.0", features = ["rt", "macros","rt-multi-thread"] }
futures = "0.3.17"
async-trait = "0.1.52"
lazy_static = "1.4.0"
